<resources>
    <string name="app_name">Record Keeper</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="running_header">Running</string>
    <string name="running_image_description">Running Image</string>
    <string name="five_km_heading">5Km</string>
    <string name="ten_km_heading">10Km</string>
    <string name="half_marathon_heading">Half Marathon</string>
    <string name="marathon_heading">Marathon</string>
    <string name="cycling_image_description">Cycling Image</string>
    <string name="cycling_header">Cycling</string>
    <string name="fifty_km_heading">50KM</string>
    <string name="twenty_km_heading">20KM</string>
    <string name="hundred_km_heading">100KM</string>
    <string name="max_speed">Max Speed</string>
    <string name="reset_running_records">Reset running records</string>
    <string name="reset_cycling_records">Reset cycling records</string>
    <string name="reset_all_records">Reset all records</string>
    <string name="record_field_hint">Record</string>
    <string name="date_field_hint">Date</string>
    <string name="save_button_text">Save</string>
    <string name="clear_record_button_text">Clear Record</string>
</resources>