<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_record"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:hint="@string/record_field_hint"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            tools:text="24:15" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_date"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/date_field_hint"
        app:layout_constraintTop_toBottomOf="@id/text_input_record">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            tools:text="15 january 2023" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/save_button_text"
        app:layout_constraintTop_toBottomOf="@id/text_input_date" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clear"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/clear_record_button_text"
        app:layout_constraintTop_toBottomOf="@id/button_save" />

</androidx.constraintlayout.widget.ConstraintLayout>